--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "~1.13.1",
     "mongodb": "~2.0.35",
     "mongoose": "~4.0.6",
-    "morgan": "~1.6.0"
+    "morgan": "~1.6.0",
+    "jsonwebtoken": "~5.0.2"
   }
 }
