--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "mongodb": "~2.0.35",
     "mongoose": "~4.0.6",
     "morgan": "~1.6.0",
-    "jsonwebtoken": "~5.0.2"
+    "jsonwebtoken": "~5.0.2",
+    "nodemailer": "~1.4.0"
   }
 }
