--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "mongoose": "~4.0.6",
     "morgan": "~1.6.0",
     "jsonwebtoken": "~5.0.2",
-    "nodemailer": "~1.4.0"
+    "nodemailer": "~0.7.0",
+    "async": "~1.3.0"
   }
 }
